--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <span class = "sp">
-<a href = "shadowforeverr.github.io/mainpage.html">
+<a href = "https://shadowforeverr.github.io/mainpage.html">
     eee
             </a>
         </span>
