--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <span class = "sp">
 <a href = "https://shadowforeverr.github.io/mainpage.html">
-    eee
+    wow
             </a>
         </span>
         <span class = "sp">
