--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     </head>
     <body>
         <span class = "sp">
-<a href = "https://shadowforeverr.github.io/mainpage.html">
-    wow
+<a href = "https://shadowforeverr.github.io/mainpage/index.html">
+    omg
             </a>
         </span>
         <span class = "sp">
